# RepoConductor

./: CHANGELOG.md  LICENSE  README.md  README.sync-conflict-20241205-125146-2AWUPVK.md  flake.nix  repoconductor.cabal
app/: Concurrency.hs  Core.hs  Decor.hs  Main.hs  OS.hs  Purity.hs  Static.hs  Taggy.hs  Tommy.hs  Types.hs
completions/: _repoconductor  repoconductor.bash  repoconductor.fish
