cabal-version:      3.0
name:               repoconductor
version:            0.1.1
license:            BSD-2-Clause
license-file:       LICENSE
author:             shichirouji21
maintainer:         shichirouji21@proton.me
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall
executable repoconductor 
    import:           warnings
    main-is:          Main.hs
    other-modules:    Core, Purity, OS, Tommy, Taggy, Static, Decor
    -- Win32 >=2.14.0.0,
    -- unix >=2.7.3,
    build-depends: 
        base >=4.7 && <5,
        optparse-applicative >=0.14,
        directory >=1.3,
        process >=1.6,
        filepath >=1.4,
        async >=2.2.5,
        containers >=0.6.7,
        mtl>=2.2.2,
        tomland>=0.1,
        text>=2.0.2,
        unix >=2.7.3
    hs-source-dirs:   app
    default-language: Haskell2010
